--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,15 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     //swagger 3.0
     /*swagger3.0*/
     implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-   // JPA
+
+    // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //test
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
