feat: postgresql 연동 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=crudPractice
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://localhost:5433/board
+spring.datasource.username=postgres
+spring.datasource.password=gemiso
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database=postgresql
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
