--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.4'
+    id 'org.springframework.boot' version '2.7.9'
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 }
 
@@ -24,8 +24,26 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //postgresql
+    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    implementation group: 'org.postgresql', name:'postgresql', version: '42.7.2'
+
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.0' // 최신 버전을 확인하세요
+
+    // Jakarta Validation API
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.0' // 최신 버전 확인
+
+    // Hibernate Validator (Jakarta 호환)
+    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final' // 최신 버전 확인
+
+    // 필요시, 의존성에 추가 (Optional)
+    implementation 'org.glassfish:javax.el:3.0.0' // EL API가 필요한 경우
+
+    implementation 'javax.validation:validation-api:2.0.1.Final' // 또는 다른 최신 버전
+    implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final' // 또는 다른 최신 버전
 
     //swagger 3.0
     /*swagger3.0*/
@@ -43,7 +61,8 @@ dependencies {
     implementation 'org.springframework.data:spring-data-envers' //수정 내역 의존성
 
     //lombok
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
