--- a/build.gradle
+++ b/build.gradle
@@ -20,27 +20,34 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'javax.persistence:javax.persistence-api:2.2' // JPA API 의존성
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    //queryDSL
+    implementation "com.querydsl:querydsl-jpa"
+    implementation "com.querydsl:querydsl-core"
+    implementation "com.querydsl:querydsl-collections"
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
+
 
     //postgresql
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation group: 'org.postgresql', name:'postgresql', version: '42.7.2'
 
+
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'jakarta.validation:jakarta.validation-api:3.0.0' // 최신 버전을 확인하세요
+    implementation 'javax.validation:validation-api:2.0.1.Final' // Validation API
 
-    // Jakarta Validation API
-    implementation 'jakarta.validation:jakarta.validation-api:3.0.0' // 최신 버전 확인
 
     // Hibernate Validator (Jakarta 호환)
     implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final' // 최신 버전 확인
 
     // 필요시, 의존성에 추가 (Optional)
-    implementation 'org.glassfish:javax.el:3.0.0' // EL API가 필요한 경우
 
     implementation 'javax.validation:validation-api:2.0.1.Final' // 또는 다른 최신 버전
     implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final' // 또는 다른 최신 버전
@@ -51,7 +58,9 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 
     // JPA
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     //test
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
@@ -67,4 +76,22 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// Querydsl 설정부
+def generated = 'src/main/generated'
+
+// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile) {
+    options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+// java source set 에 querydsl QClass 위치 추가
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+    delete file(generated)
 }
